[package]
name = "do_adp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
clap = { version = "4.1.7", features = ["derive"] }

[[bin]]
name = "josh_point_finder"
path = "src/josh_point_finder/main.rs"

[[bin]]
name = "josh_downloader"
path = "src/josh_downloader/main.rs"